@@ -634,16 +634,71 @@ namespace utility
 		if(msecs == 0)
 			return 0;
 
-		unsigned int len = text.size();
+		std::vector<int> num_characters = utility::get_num_characters(text);
+		
+		if (num_characters.size() == 0)
+			return 0;
+
+		unsigned int len = 0;
+
+		for (std::vector<int>::const_iterator it = num_characters.begin(); it != num_characters.end(); ++it)
+			len += *it;
+		
+		len += 2 * (num_characters.size() - 1);	// a newline counts as 2 characters
 
 		if(len == 0)
 			return 0;
 
-		double dsX = len * 1000 / msecs;
-
-		int ds = (int)(round(dsX*10) / 10);
+		int ds = len * 1000 / msecs;
 
 		return ds;
+	}
+	
+	/*
+	 *	get number of characters for each line in the text
+	 */
+	std::vector<int> get_num_characters(const Glib::ustring &text)
+	{
+		std::vector<int> num_characters;
+		std::istringstream iss(text);
+		std::string line;
+
+		while( std::getline(iss, line) )
+		{
+			utility::trim_right(line, "\r");
+			line = utility::get_stripped_text(line);
+			Glib::ustring::size_type len = reinterpret_cast<Glib::ustring&>(line).size();
+			num_characters.push_back(len);
+		}
+		
+		return num_characters;
+	}
+	
+	/*
+	 * trim characters from the right
+	 */
+	void trim_right(std::string &str, const char *chars2remove)
+	{
+		if (!str.empty())
+		{
+			std::string::size_type pos = str.find_last_not_of(chars2remove);
+
+			if (pos != std::string::npos)
+				str.erase(pos + 1);
+			else
+				str.erase(str.begin() , str.end()); // make empty
+		}
+	}
+
+	/*
+	 * get a text stripped from tags
+	 */
+	Glib::ustring get_stripped_text(const Glib::ustring &text)
+	{
+		// pattern for tags like <i>, </i>, {\comment}, etc.
+		static Glib::RefPtr<Glib::Regex> tag_pattern = Glib::Regex::create("</?\\w+>|{.*?}");
+
+		return tag_pattern->replace(text, 0, "", static_cast<Glib::RegexMatchFlags>(0));
 	}
 
 	/*
